# Project_LP1_AED1

./: CMakeLists.txt  README.md  main.c
Libs_util/: libs.c  libs.h  libs_stats.c  libs_stats.h
Numeros_chars/: Parte2.c  Parte2.h
Numeros_inteiros/: Inteiros.c  Inteiros.h  Parte1.c  Parte1.h
